
New features, enhancements:

  * Implemented export to image for whole timeline
  * Implemented vertical zooming with Alt+Mousewheel
  * Implemented vertical scrolling of timeline events
  * Select all, Ctrl-A implemented in event editor description.
  * New entry in Help menu for feedback reporting
  * New entry in Help menu for feature descriptions and feedback reporting
  * Balloon size restricted to not expand over timeline border
  * Help documentation updated
  * Adjustments made to be able to use wxpython version 2.9
  * Replaced WxTimeType and PyTimeType with GregorianTimeType

Bug fixes:

  * Fixed exception when right-clicking in CatergoriesEditor
  * When 'ends today' start time can't be > now, anymore
  * Search bar gives no exception when searching twice or using search button

Removed features:

  * Printing: Use export to image and print image instead
  * Old timeline file format: Last used in version 0.9.0

Timeline 0.21.1, released on 7 July 2013
========================================

Bug fixes:

  * Bug fix. Exception when exporting image

Timeline 0.21.0, released on 30 June 2013
==========================================

New features, enhancements:

  * Added feature, Set category on selected events
  * Added feature, Set category on events without category
  * Added 'Import' feature that makes it possible to merge timelines.
  * Added 'Edit Event' menu

Bug fixes:

  * Bug fix. Allow Preferences setting when no timeline exists
  * Bug fix. Reset selected events list when selected events are deleted

Timeline 0.20.0, released on 30 March 2013
==========================================

New features, enhancements:

  * Added 'Save As' feature
  * Strategy for allowing multiple users to use the same Timeline file.
  * The timeline view regains focus when the event editor is closed.
  * Enter-key works in date and time fields of the event editor
  * Some help texts updated
  * New version of icalender to cope with years before 1900